--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "type": "chrome",
             "request": "launch",
             "name": "Launch Chrome against localhost",
-            "url": "http://localhost/php_mysql/${relativeFile}",
+            "url": "http://localhost/FSC_PHP/${relativeFile}",
             "webRoot": "${workspaceFolder}"
         }
     ]
